# kallipos

./: .gitignore  BookScraper.py  downloaded_files.txt  main.py  pdfs.py  pyproject.toml  test.ipynb
